# upgo

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile.auth  Dockerfile.config-mgr  Dockerfile.frontend  Dockerfile.frs  Dockerfile.gateway  Justfile  README.md  buf.work.yaml  docker-compose.yml  pre-cache.sh
ci/: dagger.json  go.mod  main.go
contracts/: Cargo.toml  build.rs
contracts/proto/: auth.proto  fund.proto  position.proto  risk.proto  user.proto
contracts/src/: lib.rs
contracts/src/proto/: auth.rs  fund.rs  mod.rs  position.rs  risk.rs  user.rs
doc/: api.md  ci-cd-deployment.md  frs-design.md  runbook.md  user-guide.md
frontend/: nginx.conf
frontend/auth/: Cargo.toml
frontend/auth/src/: api.rs  lib.rs  main.rs  session.rs
frontend/auth/src/ui/: app.rs  files.rs  login.rs  mod.rs  register.rs  settings.rs
frontend/web/: index.html  package.json  style.css
k8s/base/: auth-config.yaml  auth-deployment.yaml  auth-hpa.yaml  auth-secret.yaml  auth-service.yaml  clickhouse-service.yaml  clickhouse-statefulset.yaml  config-mgr-deployment.yaml  config-mgr-service.yaml  frontend-deployment.yaml  frs-deployment.yaml  frs-service.yaml  kustomization.yaml  mailpit-deployment.yaml  mailpit-service.yaml  minio-service.yaml  minio-statefulset.yaml  nats-service.yaml  nats-statefulset.yaml  postgres-config.yaml  postgres-deployment.yaml  redis-deployment.yaml  rnacos-deployment.yaml  rnacos-service.yaml  signoz-config.yaml  signoz-deployment.yaml  signoz-service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/dev/patches/: nats-limits.yaml  postgres-limits.yaml  redis-limits.yaml
lib/telemetry/: Cargo.toml
lib/telemetry/src/: lib.rs
migrations/account/: 20230101000001_create_users.sql  20230101000002_create_fund_accounts.down.sql  20230101000002_create_fund_accounts.sql  20230101000003_create_fund_transactions.down.sql  20230101000003_create_fund_transactions.sql  20230101000004_create_positions.down.sql  20230101000004_create_positions.sql  20230101000005_create_position_histories.down.sql  20230101000005_create_position_histories.sql  20230101000006_create_risk_events.down.sql  20230101000006_create_risk_events.sql
migrations/auth/: 20230101000001_create_sessions.sql  20230101000002_create_refresh_tokens.sql  20230101000003_create_email_verifications.down.sql  20230101000003_create_email_verifications.sql  20230101000004_create_account_deletions.down.sql  20230101000004_create_account_deletions.sql
scripts/: com.upgo.plist  upgo-start.sh
services/account/: Cargo.toml
services/account/src/: lib.rs  main.rs
services/account/src/application/: fund_service.rs  mod.rs  position_service.rs  risk_service.rs  user_service.rs
services/account/src/domain/: error.rs  events.rs  fund.rs  mod.rs  position.rs  risk.rs  user.rs
services/account/src/domain/services/: mod.rs  risk_control.rs
services/account/src/infrastructure/: config.rs  db.rs  mod.rs  nats.rs
services/account/src/infrastructure/repositories/: fund_repository.rs  mod.rs  position_repository.rs  risk_repository.rs  user_repository.rs
services/account/src/interface/grpc/: fund_handler.rs  mod.rs  position_handler.rs  risk_handler.rs  user_handler.rs
services/account/tests/: fund_tests.rs  integration_tests.rs  user_tests.rs
services/account/tests/common/: mod.rs
services/auth/: Cargo.toml
services/auth/src/: lib.rs  main.rs
services/auth/src/application/: auth_service.rs
services/auth/src/domain/: account_deletion.rs  email_verification.rs  error.rs  events.rs  jwt.rs  mod.rs  password.rs  session.rs
services/auth/src/infrastructure/: account_client.rs  cleanup_task.rs  config.rs  event_publisher.rs  jwt_service.rs  mail_service.rs  mod.rs
services/auth/src/infrastructure/repositories/: account_deletion_repository.rs  email_verification_repository.rs  mod.rs  refresh_token_repository.rs  session_repository.rs
services/auth/src/interface/: grpc.rs  middleware.rs  mod.rs
services/config-mgr/: Cargo.toml
services/config-mgr/src/: config.rs  http.rs  main.rs  rnacos_client.rs
services/frs/: Cargo.toml
services/frs/src/: config.rs  http.rs  main.rs  storage.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs  proxy.rs  static_files.rs
