[package]
name = "frontend-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-futures = "0.4"
gloo-storage = "0.3"
chrono.workspace = true
wasm-logger = "0.2"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
