[package]
name = "frontend-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "frontend-auth"
path = "src/main.rs"

[lib]
name = "frontend_auth"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dioxus = { version = "0.6", features = ["desktop"] }
dirs = "6"
