[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry.workspace = true
anyhow.workspace = true
tokio.workspace = true
