[package]
name = "account"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docker_tests)'] }

[dependencies]
contracts = { path = "../../contracts" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
thiserror.workspace = true
anyhow.workspace = true
prost.workspace = true
tonic.workspace = true
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
async-nats.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
testcontainers.workspace = true
