[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
contracts = { path = "../../contracts" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
prost.workspace = true
tonic.workspace = true
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
async-nats.workspace = true
async-trait.workspace = true
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder", "tokio1"] }
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
telemetry = { path = "../../lib/telemetry" }

[features]
default = []
nats = []
