[package]
name = "config-mgr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", features = ["json"] }
telemetry = { path = "../../lib/telemetry" }
